--- a/src/pug/pages/anti-cellulite-massage.pug
+++ b/src/pug/pages/anti-cellulite-massage.pug
@@ -12,8 +12,9 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/anti-cellulite-massage.html',
       pageClass: 'anti-cellulite-massage-page',
       theme: '9',
-      mainScreenHeading: 'Антицеллюлитный массаж.',
-      mainScreenSubheading: 'Избавляет от целлюлита, разглаживает кожу. Подтягивает ягодицы, уменьшает «ушки» и бока',
+      mainScreenHeading: 'Антицеллюлитный массаж',
+      mainScreenSubheading: `Избавляет от&nbsp;целлюлита, разглаживает кожу. Подтягивает ягодицы, уменьшает «ушки»
+        и&nbsp;бока`,
       mainScreenFeatures: [
         {
           bigText: `${globalData.company.businessDuration} лет`,
