--- a/src/pug/pages/body-lymphatic-drainage.pug
+++ b/src/pug/pages/body-lymphatic-drainage.pug
@@ -12,21 +12,21 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/body-lymphatic-drainage.html',
       pageClass: 'body-lymphatic-drainage-page',
       theme: '8',
-      mainScreenHeading: 'Лимфодренажный массаж.',
-      mainScreenSubheading: `Избавляет от отёков на лице и теле, оздоравливает и улучшает внешность, возвращает лёгкость
-        походки`,
+      mainScreenHeading: 'Лимфодренажный массаж',
+      mainScreenSubheading: `Избавляет от&nbsp;отёков на&nbsp;лице и&nbsp;теле, оздоравливает и&nbsp;улучшает внешность,
+        возвращает лёгкость походки`,
       mainScreenFeatures: [
         {
           bigText: '2-10 кг',
-          smallText: 'теряют клиенты, избавляясь от отёков'
+          smallText: `теряют клиенты,<br>избавляясь от отёков`
         },
         {
           bigText: 'в 8 раз',
-          smallText: 'усиливается лимфоток после процедуры'
+          smallText: `усиливается лимфоток<br>после процедуры`
         },
         {
           bigText: '500 мл',
-          smallText: 'межклеточной жидкости в среднем уходит за сеанс'
+          smallText: `межклеточной жидкости<br>в среднем уходит за сеанс`
         }
       ],
       featuresBlock: {
