--- a/src/pug/pages/chiromassage.pug
+++ b/src/pug/pages/chiromassage.pug
@@ -12,9 +12,9 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/chiromassage.html',
       pageClass: 'chiromassage-page',
       theme: '5',
-      mainScreenHeading: 'Хиромассаж лица.',
-      mainScreenSubheading: `Омолаживает и подтягивает кожу, улучшает эмоциональное состояние, гармонизирует и
-        расслабляет`,
+      mainScreenHeading: 'Хиромассаж лица',
+      mainScreenSubheading: `Омолаживает и&nbsp;подтягивает кожу, улучшает эмоциональное состояние, гармонизирует
+        и&nbsp;расслабляет`,
       mainScreenFeatures: [
         {
           bigText: `${globalData.company.businessDuration} лет`,
