--- a/src/pug/pages/classic-facial-massage.pug
+++ b/src/pug/pages/classic-facial-massage.pug
@@ -12,8 +12,8 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/classic-facial-massage.html',
       pageClass: 'classic-facial-massage-page',
       theme: '2',
-      mainScreenHeading: 'Классический массаж лица.',
-      mainScreenSubheading: `Снимает спазмы и усталость мышц, улучшает цвет и тонус лица`,
+      mainScreenHeading: 'Классический массаж лица',
+      mainScreenSubheading: `Снимает спазмы и&nbsp;усталость мышц, улучшает цвет и&nbsp;тонус лица`,
       mainScreenFeatures: [
         {
           bigText: `${globalData.company.businessDuration} лет`,
