--- a/src/pug/pages/facial-lymphatic-drainage.pug
+++ b/src/pug/pages/facial-lymphatic-drainage.pug
@@ -12,8 +12,8 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/facial-lymphatic-drainage.html',
       pageClass: 'facial-lymphatic-drainage-page',
       theme: '3',
-      mainScreenHeading: 'Лимфодренажный массаж лица.',
-      mainScreenSubheading: 'Убирает отёки и мешки под глазами, улучшает цвет лица',
+      mainScreenHeading: 'Лимфодренажный массаж лица',
+      mainScreenSubheading: `Убирает отёки и&nbsp;мешки под&nbsp;глазами, улучшает цвет лица`,
       mainScreenFeatures: [
         {
           bigText: `${globalData.company.businessDuration} лет`,
