--- a/src/pug/pages/figure-modeling.pug
+++ b/src/pug/pages/figure-modeling.pug
@@ -12,20 +12,21 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/figure-modeling.html',
       pageClass: 'figure-modeling-page',
       theme: '7',
-      mainScreenHeading: 'Ручное моделирование фигуры.',
-      mainScreenSubheading: 'Авторская техника для похудения и подтягивания кожи. Уходит лишний вес, тают объёмы',
+      mainScreenHeading: 'Ручное моделирование фигуры',
+      mainScreenSubheading: `Авторская техника для&nbsp;похудения и&nbsp;подтягивания кожи. Уходит лишний вес, тают
+        объёмы`,
       mainScreenFeatures: [
         {
           bigText: `3 в 1`,
-          smallText: 'лимфодренаж, антицеллю&shy;литный массаж, обёртывание'
+          smallText: `лимфодренаж, антицеллю-<br>литный массаж, обёртывание`
         },
         {
           bigText: '2-15 см',
-          smallText: 'в талии теряли наши клиенты, в зависимости от начальных данных'
+          smallText: `в талии теряли наши клиенты,<br>в зависимости от начальных данных`
         },
         {
           bigText: '3-18 кг',
-          smallText: 'лишнего веса уходило у клиентов за курс массажа'
+          smallText: `лишнего веса уходило<br>у клиентов за курс массажа`
         }
       ],
       featuresBlock: {
@@ -55,5 +56,4 @@ block variables
 
 block content
   include ../includes/modules/content/features-list
-
 block script
