--- a/src/pug/pages/fullbody-massage.pug
+++ b/src/pug/pages/fullbody-massage.pug
@@ -12,8 +12,8 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/fullbody-massage.html',
       pageClass: 'fullbody-massage-page',
       theme: '11',
-      mainScreenHeading: 'Общий массаж тела.',
-      mainScreenSubheading: 'Расслабление, снятие напряжения и усталости мышц, оздоровление всего организма',
+      mainScreenHeading: 'Общий массаж тела',
+      mainScreenSubheading: `Расслабление, снятие напряжения и&nbsp;усталости мышц, оздоровление всего организма`,
       mainScreenFeatures: [
         {
           bigText: `${globalData.company.businessDuration} лет`,
