--- a/src/pug/pages/japanese-asahi-massage.pug
+++ b/src/pug/pages/japanese-asahi-massage.pug
@@ -12,7 +12,7 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/japanese-asahi-massage.html',
       pageClass: 'japanese-asahi-massage-page',
       theme: '4',
-      mainScreenHeading: 'Японский массаж лица Асахи-Зоган.',
+      mainScreenHeading: 'Японский массаж лица Асахи-Зоган',
       mainScreenSubheading: `Глубокая, интенсивная проработка. Формирует красивый овал, омолаживает`,
       mainScreenFeatures: [
         {
