--- a/src/pug/pages/neck-massage.pug
+++ b/src/pug/pages/neck-massage.pug
@@ -12,8 +12,8 @@ block variables
       canonical: 'http://expert-massage-clinic.ru/neck-massage.html',
       pageClass: 'neck-massage-page',
       theme: '10',
-      mainScreenHeading: 'Массаж шейно-воротниковой зоны.',
-      mainScreenSubheading: `Снятие боли и усталости с шейного отдела, улучшение работы мозга`,
+      mainScreenHeading: 'Массаж шейно-воротниковой зоны',
+      mainScreenSubheading: `Снятие боли и&nbsp;усталости с&nbsp;шейного отдела, улучшение работы мозга`,
       mainScreenFeatures: [
         {
           bigText: `${globalData.company.businessDuration} лет`,
