--- a/src/pug/pages/sculptural-buccal-massage.pug
+++ b/src/pug/pages/sculptural-buccal-massage.pug
@@ -6,14 +6,14 @@ block variables
     locals.data.pageData = {
       url: 'sculptural-buccal-massage.html',
       title: `Скульптурно-буккальный массаж лица в Москве по низким ценам`,
-      description: `Скульптурно-буккальный массаж - процедура, сравнимая по эффекту с пластикой. Результат заметен после
-        первого сеанса`,
+      description: `Скульптурно-буккальный массаж&nbsp;— процедура, сравнимая по&nbsp;эффекту с&nbsp;пластикой.
+        Результат заметен после первого сеанса`,
       keywords: `скульптурно-буккальный, массаж лица, Москва, услуга, описание, цена, стоимость`,
       canonical: 'http://expert-massage-clinic.ru/sculptural-buccal-massage.html',
       pageClass: 'sculptural-buccal-massage-page',
       theme: '1',
-      mainScreenHeading: 'Скульптурно-буккальный массаж лица.',
-      mainScreenSubheading: `Полная альтернатива пластике, стирает морщинки и отёки, корректирует овал лица`,
+      mainScreenHeading: 'Скульптурно-буккальный массаж лица',
+      mainScreenSubheading: `Полная альтернатива пластике, стирает морщинки и&nbsp;отёки, корректирует овал лица`,
       mainScreenFeatures: [
         {
           bigText: `${globalData.company.businessDuration} лет`,
