--- a/src/pug/pages/sports-massage.pug
+++ b/src/pug/pages/sports-massage.pug
@@ -6,15 +6,15 @@ block variables
     locals.data.pageData = {
       url: 'sports-massage.html',
       title: `Спортивный массаж в Москве, отличная цена`,
-      description: `Спортивный массаж, Москва - ${globalData.company.businessDuration} лет успешной работы! Снятие боли
+      description: `Спортивный массаж, Москва — ${globalData.company.businessDuration} лет успешной работы! Снятие боли
         после 1-го сеанса. Массаж от профессионалов по доступным ценам.`,
       keywords: `спортивный массаж, Москва, массаж спины, массаж позвоночника, лечебный массаж, услуга, описание, цена`,
       canonical: 'http://expert-massage-clinic.ru/sports-massage.html',
       pageClass: 'sports-massage-page',
       theme: '6',
-      mainScreenHeading: 'Спортивный массаж.',
-      mainScreenSubheading: `Снятие боли в мышцах, ускоренное восстановление, улучшение результатов. Возвращение в спорт
-        после травм`,
+      mainScreenHeading: 'Спортивный массаж',
+      mainScreenSubheading: `Снятие боли в&nbsp;мышцах, ускоренное восстановление, улучшение результатов. Возвращение
+        в&nbsp;спорт после травм`,
       mainScreenFeatures: [
         {
           bigText: `${globalData.company.businessDuration} лет`,
