--- a/src/assets/scss/blocks/menu/main-menu.scss
+++ b/src/assets/scss/blocks/menu/main-menu.scss
@@ -157,7 +157,7 @@
       left: 1vw;
 
       width: auto;
-      margin-top: 2.5rem;
+      margin-top: 4rem;
 
       transform: none;
     }
@@ -168,6 +168,13 @@
   .main-menu {
     &__list-item {
       font-size: 1.5rem;
+    }
+
+    &__submenu {
+      left: 2vw;
+      right: 0;
+
+      margin-top: 2.5rem;
     }
   }
 }
